--- a/src/SimonPrinz.RequestLogger.csproj
+++ b/src/SimonPrinz.RequestLogger.csproj
@@ -2,6 +2,25 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
+        <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
+        <Version>0.1.0</Version>
+        <Title>SimonPrinz.RequestLogger</Title>
+        <Authors>Simon Prinz</Authors>
+        <PackageProjectUrl>https://github.com/SimonPrinz/RequestLogger</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/SimonPrinz/RequestLogger/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/SimonPrinz/RequestLogger</RepositoryUrl>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <Company>Simon Prinz</Company>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    </ItemGroup>
 
 </Project>
